@@ -1,3 +1,6 @@
+2265.	[bug]		Test that the memory context's basic_table is non NULL
+			before freeing.  [RT #17265]
+
 2264.	[bug]		Server prefix length was being ignored. [RT #17308]
 
 2263.	[bug]		"named-checkconf -z" failed to set default value
